--- a/.github/workflows/build-multiarch.yml
+++ b/.github/workflows/build-multiarch.yml
@@ -32,128 +32,74 @@ env:
   DOCKER_BUILDKIT: 1
 
 jobs:
-  setup:
-    name: 🔧 Build Environment Setup
-    runs-on: ubuntu-latest
-    outputs:
-      services: ${{ steps.services.outputs.matrix }}
-      build-date: ${{ steps.date.outputs.date }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Generate build date
-        id: date
-        run: echo "date=$(date +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_OUTPUT
-
-      - name: Generate services matrix
-        id: services
-        run: |
-          MATRIX_JSON='{
-            "include": [
-              {
-                "app": "ecommerce-app",
-                "service": "backend",
-                "context": "./ecommerce-app/backend",
-                "image": "ecommerce-backend",
-                "description": "Node.js E-commerce API"
-              },
-              {
-                "app": "ecommerce-app",
-                "service": "frontend",
-                "context": "./ecommerce-app/frontend",
-                "image": "ecommerce-frontend",
-                "description": "React E-commerce Frontend"
-              },
-              {
-                "app": "educational-platform",
-                "service": "backend", 
-                "context": "./educational-platform/backend",
-                "image": "educational-backend",
-                "description": "Java Spring Boot Learning API"
-              },
-              {
-                "app": "educational-platform",
-                "service": "frontend",
-                "context": "./educational-platform/frontend",
-                "image": "educational-frontend",
-                "description": "Angular Learning Frontend"
-              },
-              {
-                "app": "weather-app",
-                "service": "backend",
-                "context": "./weather-app/backend",
-                "image": "weather-backend",
-                "description": "Python Flask Weather API"
-              },
-              {
-                "app": "weather-app",
-                "service": "frontend",
-                "context": "./weather-app/frontend",
-                "image": "weather-frontend",
-                "description": "Vue.js Weather Frontend"
-              },
-              {
-                "app": "medical-care-system",
-                "service": "api",
-                "context": "./medical-care-system/backend/MedicalCareSystem.API",
-                "image": "medical-api",
-                "description": ".NET Core Medical API"
-              },
-              {
-                "app": "medical-care-system",
-                "service": "frontend",
-                "context": "./medical-care-system/frontend/MedicalCareSystem.Frontend",
-                "image": "medical-frontend",
-                "description": "Blazor Medical Frontend"
-              },
-              {
-                "app": "task-management-app",
-                "service": "backend",
-                "context": "./task-management-app/backend",
-                "image": "task-backend",
-                "description": "Go Task Management API"
-              },
-              {
-                "app": "task-management-app",
-                "service": "frontend",
-                "context": "./task-management-app/frontend",
-                "image": "task-frontend",
-                "description": "Svelte Task Frontend"
-              },
-              {
-                "app": "social-media-platform",
-                "service": "backend",
-                "context": "./social-media-platform/backend",
-                "image": "social-backend",
-                "description": "Ruby on Rails Social API"
-              },
-              {
-                "app": "social-media-platform",
-                "service": "frontend",
-                "context": "./social-media-platform/frontend",
-                "image": "social-frontend",
-                "description": "React Social Frontend"
-              }
-            ]
-          }'
-          echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
-
-      - name: Validate Docker environment
-        run: |
-          echo "🔍 Validating build environment..."
-          docker --version
-          docker buildx version
-          echo "✅ Docker environment ready"
-
   build-multiarch:
     name: 🏗️ Build ${{ matrix.description }}
-    needs: setup
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       max-parallel: 6
-      matrix: ${{ fromJson(needs.setup.outputs.services) }}
+      matrix:
+        include:
+          - app: "ecommerce-app"
+            service: "backend"
+            context: "./ecommerce-app/backend"
+            image: "ecommerce-backend"
+            description: "Node.js E-commerce API"
+          - app: "ecommerce-app"
+            service: "frontend"
+            context: "./ecommerce-app/frontend"
+            image: "ecommerce-frontend"
+            description: "React E-commerce Frontend"
+          - app: "educational-platform"
+            service: "backend"
+            context: "./educational-platform/backend"
+            image: "educational-backend"
+            description: "Java Spring Boot Learning API"
+          - app: "educational-platform"
+            service: "frontend"
+            context: "./educational-platform/frontend"
+            image: "educational-frontend"
+            description: "Angular Learning Frontend"
+          - app: "weather-app"
+            service: "backend"
+            context: "./weather-app/backend"
+            image: "weather-backend"
+            description: "Python Flask Weather API"
+          - app: "weather-app"
+            service: "frontend"
+            context: "./weather-app/frontend"
+            image: "weather-frontend"
+            description: "Vue.js Weather Frontend"
+          - app: "medical-care-system"
+            service: "api"
+            context: "./medical-care-system/backend/MedicalCareSystem.API"
+            image: "medical-api"
+            description: ".NET Core Medical API"
+          - app: "medical-care-system"
+            service: "frontend"
+            context: "./medical-care-system/frontend/MedicalCareSystem.Frontend"
+            image: "medical-frontend"
+            description: "Blazor Medical Frontend"
+          - app: "task-management-app"
+            service: "backend"
+            context: "./task-management-app/backend"
+            image: "task-backend"
+            description: "Go Task Management API"
+          - app: "task-management-app"
+            service: "frontend"
+            context: "./task-management-app/frontend"
+            image: "task-frontend"
+            description: "Svelte Task Frontend"
+          - app: "social-media-platform"
+            service: "backend"
+            context: "./social-media-platform/backend"
+            image: "social-backend"
+            description: "Ruby on Rails Social API"
+          - app: "social-media-platform"
+            service: "frontend"
+            context: "./social-media-platform/frontend"
+            image: "social-frontend"
+            description: "React Social Frontend"
     
     steps:
       - name: 📥 Checkout repository
@@ -188,7 +134,7 @@ jobs:
             org.opencontainers.image.title=${{ matrix.description }}
             org.opencontainers.image.description=${{ matrix.description }}
             org.opencontainers.image.vendor=temitayocharles
-            org.opencontainers.image.created=${{ needs.setup.outputs.build-date }}
+            org.opencontainers.image.created=$(date +'%Y-%m-%d %H:%M:%S UTC')
             
       - name: 🔍 Validate Dockerfile
         run: |
@@ -234,11 +180,24 @@ jobs:
 
   security-scan:
     name: 🔒 Security Scanning
-    needs: [setup, build-multiarch]
+    needs: build-multiarch
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     strategy:
-      matrix: ${{ fromJson(needs.setup.outputs.services) }}
+      matrix:
+        include:
+          - image: "ecommerce-backend"
+          - image: "ecommerce-frontend"
+          - image: "educational-backend"
+          - image: "educational-frontend"
+          - image: "weather-backend"
+          - image: "weather-frontend"
+          - image: "medical-api"
+          - image: "medical-frontend"
+          - image: "task-backend"
+          - image: "task-frontend"
+          - image: "social-backend"
+          - image: "social-frontend"
     
     steps:
       - name: 🔍 Run Trivy vulnerability scanner
@@ -256,7 +215,7 @@ jobs:
 
   deployment-readiness:
     name: 🎯 Deployment Readiness Check
-    needs: [setup, build-multiarch]
+    needs: build-multiarch
     runs-on: ubuntu-latest
     
     steps:
@@ -287,7 +246,7 @@ jobs:
 
   build-summary:
     name: 📊 Build Summary Report
-    needs: [setup, build-multiarch, deployment-readiness]
+    needs: [build-multiarch, deployment-readiness]
     runs-on: ubuntu-latest
     if: always()
     
@@ -296,7 +255,7 @@ jobs:
         run: |
           echo "# 🚀 Multi-Architecture Build Summary" > build-summary.md
           echo "" >> build-summary.md
-          echo "**Build Date:** ${{ needs.setup.outputs.build-date }}" >> build-summary.md
+          echo "**Build Date:** $(date +'%Y-%m-%d %H:%M:%S UTC')" >> build-summary.md
           echo "**Commit:** ${{ github.sha }}" >> build-summary.md
           echo "**Branch:** ${{ github.ref_name }}" >> build-summary.md
           echo "**Platforms:** \`${{ env.PLATFORMS }}\`" >> build-summary.md
